show import conctact from a csv file modal
Former-commit-id: 64a9aa5cfe863408a9a7142356551aa903812f08 [formerly d585091a94983cf1bf4bc5437222821d3e9faacc] [formerly 297f51c046763956e623457e3fbc37533333226f [formerly 4bbc9fbaa246bc2bf0bdcd8daaa03d9cf2a24578]]
Former-commit-id: c6a227c29ab9e523bb7279effbb2093e6dc19421 [formerly 086daa7eab4f800bc42c5a3aa962884c81f2771b]
Former-commit-id: 58e20fe24e8a0c377068574b0cb7e4f3e06a97c5

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -308,6 +308,25 @@
       </div>
     </div>
     </div>
+<div class="modal fade"  id="importModal"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+              <h3 id="myModalLabel">{{_("Import contacts")}}</h3>
+            </div>
+            <div class="modal-body">
+                <p>{{_("We support importing CSV files from Google Contacts, Outlook, Outlook Expressand some other apps. Please select a CSV file to upload:")}}</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn default" data-dismiss="modal">{{_("Close")}}</button>
+              <button ng-click="createPickerUploader()"  type="submit" class="btn green btn-primary addContactNow">{{_("Import")}} </button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
 <script type="text/javascript">
  $('#slimtest1').slimScroll({
                     height: '20px'
