--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -253,14 +253,14 @@
                                           <form class="form-inline newLeadForm" role="form">
                                             <div class="form-group lg-group" style="">
                                               <label class="sr-only" for="exampleInputEmail2">Email</label>
-                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="Enter an email">
+                                              <input type="email" class="form-control" id="exampleInputEmail2" ng-model="newEmail" placeholder="Enter an email">
                                             </div>
-                                             <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addEmail(email)" >Add</button>
+                                             <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addEmail(newEmail)" >Add</button>
                                               <button type="submit" ng-click="showEmailForm=false" class="btn btn-default">X</button>
                                           </form>
                                         </div>
                           </li>
-                        <li ng-repeat="email in infonodes.emails"> <a editable-text="email.email" editoptions editdataattr="deleteInfonode('<%=email.entityKey%>','emails')"  onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
+                        <li ng-repeat="email in infonodes.emails"> <a editable-text="email.email" editoptions editdataattr="deleteInfonode('<%=email.entityKey%>','emails',email.email)"  onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
                           <li>
                             <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm=true"><i class="icon-plus"></i> Add a new email address </a>
                           </li>
@@ -567,37 +567,31 @@
                       </div>
                 <!-- $ send email tab -->
                 <div class="tab-pane active" id="tab_1_4" ng-show="selectedTab == 8">
+                    <div class="showPage">
+                        <div class="row">
+                            <div class="col-md-12  margin-bottom-10">
+                                <p class⁼"lead"=""><strong>Send an Email to :</strong> </p>
+                                <form  class="ng-pristine ng-valid">
+                                    <div class="form-group">
+                                        <input  type="text" required class="form-control ng-pristine ng-valid" autofocus  placeholder="To" id="messageSubject" ng-model="email.to">
+                                    </div>
 
-                         <div class="showPage">
-                           <div class="row">
-                             <div class="col-md-12  margin-bottom-10">
-                          <p class⁼"lead"=""><strong>Send an Email to :</strong> </p>
-                          <form  class="ng-pristine ng-valid">
-                                            <div class="form-group">
-                                            <input required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="To" id="messageSubject" ng-model="email.to">
-                                            </div>
-                                            <div class="form-group">
-                                            <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="CC" id="messageSubject" ng-model="email.cc">
-                                            </div>
-                                            <div class="form-group">
-                                            <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="BCC" id="messageSubject" ng-model="email.bcc">
-                                            </div>
-                                            <div class="form-group">
-                                             <input  required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="Add a subject" id="messageSubject" ng-model="email.subject">
-                                             </div>
-                                            <div class="form-group">
-                                            <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
-                                             </div>
-                                          <div class="form-group">
-                                            <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
-                                             </div>
-                                         <div class="pull-right">
-
-                                            <input   ng-click="sendEmail(email)" ng-disabled="isLoading" type="submit" class="btn green" value="Send">
-
-
-                                          </div>
-                            </form>
+                                    <div class="form-group">
+                                        <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="CC" id="messageSubject" ng-model="email.cc">
+                                    </div>
+                                    <div class="form-group">
+                                        <input class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="BCC" id="messageSubject" ng-model="email.bcc">
+                                    </div>
+                                    <div class="form-group">
+                                        <input  required class="form-control ng-pristine ng-valid" autofocus type="text" placeholder="Add a subject" id="messageSubject" ng-model="email.subject">
+                                     </div>
+                                    <div class="form-group">
+                                        <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
+                                     </div>
+                                     <div class="pull-right">
+                                        <input   ng-click="sendEmail(email)" ng-disabled="isLoading || !email.to" type="submit" class="btn green" value="Send">
+                                    </div>
+                                </form>
                           </div>
                         </div>
                       </div>
