add address on leads has been controled
Former-commit-id: a8ab511a18355a4a6f9f97f912cc9ab22829c5bb [formerly b8d89380d93efcfaa2df9875d9304207e0bc4dd1] [formerly 1b68eeaaeaad34c66b95ed7eff5efbe56cd8116b [formerly d072e2eafdc47fa21702560cfeb7eb77382fde99]]
Former-commit-id: 276d46849914e90aa1e6cd1cec2fcafe30e54a91 [formerly 2806951b31cc97c892cf3034a8b5e785864dd0f4]
Former-commit-id: 4e34324bdfc7f024e4e8467edeed628f85a9f60a

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -964,7 +964,7 @@
               <div class="modal-footer">
                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                  <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="!(address.country || address.postal_code || address.state || address.city || address.street)" type="submit" class="btn green" value="{{_('Add this address')}}">
+                  <input ng-hide="isLoading" ng-click="addAddress(address)" ng-disabled="(!address.country || !address.state || !address.city || !address.street)" type="submit" class="btn green" value="{{_('Add this address')}}">
                   <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
               </div>
                 </form>
