we can't edit a value of custom field on new lead page and new contact page #614
Former-commit-id: 40b58e08e820129c45c5e527f641b8ebe22d3a18 [formerly 36ea71aea14e70b83f1eb4da7681c59e26a4ffd9] [formerly 5fc73fd8434f874a758b5d5bae90def1e95ba551 [formerly b4df1d77fb4a0b8ae2da5753db84bc7e8e6d8005]]
Former-commit-id: 36fa0ec13ea6ebcb8f0072944dce8176cfd23224 [formerly a121d5773dd743e64eb910fda520186deee8d1ea]
Former-commit-id: f5cc01a1aaed978d59077e1f2c3c6c546790501c

--- a/templates/contacts/contact_new.html
+++ b/templates/contacts/contact_new.html
@@ -310,9 +310,12 @@
                     </div>
                   </li>
                   <li ng-repeat="custom in customfields">
-                    <span editoptions editdataattr="deleteInfos(customfields,$index)">
-                      <%= custom.field%>  : <%= custom.value%>
-                    </span>
+                    
+                    <a editoptions editdataattr="deleteInfos(customfields,$index)" editable-text="custom.field" onbeforesave="inlinePatch('Infonode','customfields', 'field',custom.entityKey,$data)" href="<%=custom.field%>" target="_blank"> <%=custom.field%>
+                    </a>
+                     <a editoptions editdataattr="deleteInfos(customfields,$index)" editable-text="custom.value" onbeforesave="inlinePatch('Infonode','customfields', 'value',custom.entityKey,$data)" href="<%=custom.value%>" target="_blank"> <%=custom.value%>
+                    </a>
+
                   </li>
                   <li>
                     <a ng-click="showCustomFieldForm=true" ng-hide="showCustomFieldForm"class="btn-link addAnotherPhone" data-toggle="modal">
