leads controls have been fixed , fix #601 , fix #598
Former-commit-id: a53c754d087a5e3aa9e20c879fabdbc1019c0003 [formerly 0d7133663475977a4664512757a81c335b72d92e] [formerly 8e16be5593340e1825c99c71ba9dc5bb0c45e0cc [formerly 8c1203cdb2d0e9099ebec9e318bc0290157e83cd]]
Former-commit-id: 73f752d01f091f0fffc1ae0ee7aa03d5961c010a [formerly 40f1487d8220b193d7bdf43d28e6a5e79b67e51b]
Former-commit-id: 48c1bd27574c89a1146f6621db5498850c4668c3

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -219,7 +219,7 @@
                         <ul class="list-unstyled contact-infos">
                           <li ng-show="showPhoneForm">
                                       <div class="row">
-                                        <form class="form-inline newLeadForm" role="form">
+                                        <form name="phoneform" class="form-inline newLeadForm" role="form">
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputPassword2">Type</label>
                                             <select ng-model="phone.type" class="form-control">
@@ -231,7 +231,22 @@
                                           </div>
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputEmail2">Number</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
+                                            <input 
+                                                name="phonenumber" 
+                                                type="text"  
+                                                class="form-control" 
+                                                id="exampleInputEmail2" 
+                                                ng-model="phone.number" 
+                                                placeholder="Enter a number" 
+                                                required 
+                                                ng-pattern="/^(?:(?:\(?(?:00|\+)([1-4]\d\d|[1-9]\d?)\)?)?[\-\.\ \\\/]?)?((?:\(?\d{1,}\)?[\-\.\ \\\/]?){0,})(?:[\-\.\ \\\/]?(?:#|ext\.?|extension|x)[\-\.\ \\\/]?(\d+))?$/i"
+                                                ng-focus="isFocused=true">
+                                               <!--  <span class="error" ng-show="phoneform.phonenumber.$error.required">
+                                                    Required!
+                                                </span>
+                                                    <span class="error" ng-show="phoneform.phonenumber.$error.pattern">
+                                                  Not valid!
+                                                </span> -->
                                           </div>
                                            <button type="submit" ng-click="addPhone(phone)" class="btn blue jfk-button jfk-button-action">Add</button>
                                             <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
@@ -283,12 +298,21 @@
                           <strong>Website</strong>
                         </div>
                         <ul class="list-unstyled contact-infos">
-                          <li ng-show="showWebsiteForm">
-                                      <div class="row">
-                                        <form class="form-inline newLeadForm" role="form">
+                            <li ng-show="showWebsiteForm">
+                                <div class="row">
+                                    <form name="websiteform" class="form-inline newLeadForm" role="form">
                                           <div class="form-group lg-group" style="">
                                             <label class="sr-only" for="exampleInputEmail2">Website</label>
-                                            <input type="text" ng-model="website.url" class="form-control" id="exampleInputEmail2" placeholder="Enter a Website">
+                                            <input 
+                                                name="website"
+                                                type="url" 
+                                                ng-model="website.url" 
+                                                class="form-control" 
+                                                id="exampleInputEmail2" 
+                                                placeholder="Enter a Website"
+                                                required
+                                              
+                                                >
                                           </div>
                                       <button type="submit" ng-click="addWebsite(website)" class="btn blue jfk-button jfk-button-action">Add</button>
                                       <button type="submit" ng-click="showWebsiteForm=false" class="btn btn-default">X</button>
@@ -309,7 +333,7 @@
                                             <form class="form-inline newLeadForm" role="form">
                                               <div class="form-group lg-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Social link</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
+                                                <input type="url" class="form-control" id="exampleInputEmail2" ng-model='sociallink.url' placeholder="Enter a social link">
                                               </div>
                                                <button ng-click="addSocial(sociallink)" type="submit" class="btn blue jfk-button jfk-button-action">Add</button>
                                                 <button type="submit" ng-click="showSociallinkForm=false" class="btn btn-default">X</button>
@@ -330,11 +354,19 @@
                                             <form class="form-inline newLeadForm" role="form">
                                               <div class="form-group sm-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Field</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.field" placeholder="Enter field name">
+                                                <input 
+                                                    type="text" 
+                                                    class="form-control" 
+                                                    id="exampleInputEmail2" 
+                                                    ng-model="customfield.field" placeholder="Enter field name" required>
                                               </div>
                                               <div class="form-group sm-group" style="">
                                                 <label class="sr-only" for="exampleInputEmail2">Value</label>
-                                                <input type="text" class="form-control" id="exampleInputEmail2" ng-model="customfield.value" placeholder="Enter a value">
+                                                <input 
+                                                    type="text" 
+                                                    class="form-control" 
+                                                    id="exampleInputEmail2" 
+                                                    ng-model="customfield.value" placeholder="Enter a value" required>
                                               </div>
                                                <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="addCustomField(customfield)">Add</button>
                                                 <button type="submit" class="btn btn-default" ng-click="showCustomFieldForm=false">X</button>
