--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -11,30 +11,9 @@
       <div class="col-md-9">
       <div class="row">
       <div class="col-md-10 col-xs-10">
-      <div class="filterOptions">
-          <span role="button" class="filterItem" ng-click="filterByOwner();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">All <span class="hidden-xs hiddenOnxs">Leads</span> </span>
-          <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='my'}" ng-click="filterByOwner('{{ME}}');selectedOption ='my'">My <span class="hidden-xs hiddenOnxs">Leads</span></span>
-          <div class="btn-group">
-              <a class="filterItem" href="#" data-toggle="dropdown"  ng-class="{activeFilter: selectedOption =='sort'}" >
-                Sort by
-                <i class="icon-angle-down"></i>
-              </a>
-              <ul class="dropdown-menu">
-            <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
-            <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
-            <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
-            <!--li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li-->
-            <!--li><a ng-click="orderBy('company')" href="#" data-toggle="modal">{{ _('Company') }}</a></li-->
-            <li><a ng-click="orderBy('status')" href="#" data-toggle="modal">{{ _('Status') }}</a></li>
-              </ul>
-        </div>
-        </div>
+
       </div>
-      <div class="col-md-2 col-xs-2">
-      <a href="/#/leads/new" class="btn red newAccountBtnOnscroll pull-right hidden afterScrollBtn">
-           New <span class="hidden-xs hiddenOnxs">Lead</span>
-         </a>
-      </div>
+
       </div>
     </div>
     </div>
@@ -55,6 +34,7 @@
 
       <!-- END SAMPLE PORTLET CONFIGURATION MODAL FORM-->
       <!-- BEGIN PAGE CONTAINER-->
+
   <div class="" ng-show="immediateFailed">
     <div class="col-md-12">
 
@@ -63,7 +43,7 @@
         </span>
     </div>
   </div>
-  <div ng-show="isSignedIn" class="listContainer">
+  <div class="listContainer">
 
         <!-- END PAGE HEADER-->
         <!-- BEGIN PAGE CONTENT-->
@@ -77,7 +57,7 @@
     <div class="tab-pane">
     <div class="row ">
       <div class="col-md-12" ng-hide="blankStateArticle">
-        <div ng-repeat="article in articles" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(lead,$index)">
+        <div ng-repeat="article in articles" droppable  id="card_<%=$index%>"class="cardElement" ng-drop="dropTag(article,$index)">
           <div class="detailsSection">
             <div class="head">
               <div class="pic">
@@ -88,7 +68,7 @@
               </div>
               <div class="text">
                 <div class="name">
-                  <a href="/blog#/articles/<%= article.id %>" class="profile-link">
+                  <a href="/blog/articles/<%= article.id %>" class="profile-link">
                     <%= article.title %>
                   </a>
                 </div>
@@ -110,9 +90,9 @@
               <div class="clearfix"></div>
             </div>
           </div>
-          <div class="tagsSection" ng-class="{hidden: lead.tags==null}">
+          <div class="blogTagsSection" ng-class="{hidden: article.tags==null}">
             <div class="sectionContent">
-              <a ng-repeat="tag in lead.tags" href="/#/search/type:Lead tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
+              <a ng-repeat="tag in article.tags" href="/#/search/type:Article tags:<%=tag.id%>"> <span draggable  ng-drag="dragTagItem(tag.edgeKey)" class="pull-right task-label task-tag badge ng-scope ng-binding" style="background-color: <%=tag.color%>;color:<%=idealTextColor(tag.color)%>;">  <%= tag.name %></span>
               </a>
             </div>
           </div>
@@ -174,12 +154,15 @@
               <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
             </div>
           </li>
+          {% if is_admin %}
           <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  Add a new label
             </a>
           </li>
+          {% endif %}
         </ul>
+        {% if is_admin %}
         <form class="well newTagForm" role="form" ng-show="showNewTag">
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
@@ -203,6 +186,7 @@
           <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags
           </button>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -237,12 +221,15 @@
               <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
             </div>
           </li>
+          {% if is_admin %}
           <li class="list-group-item tags-list-item" ng-hide="showNewTag" ng-click="showNewTag=true">
             <a ng-click="" class="btn-link addAnotherPhone">
               <i class="fa fa-tags"></i>  Add a new label
             </a>
           </li>
+          {% endif %}
         </ul>
+        {% if is_admin %}
         <form class="well newTagForm" role="form" ng-show="showNewTag">
           <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button>
           <div class="row">
@@ -266,6 +253,7 @@
           <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        Manage Tags
           </button>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
