adding support page
Former-commit-id: ca4343ca678e94e37abdb99e92a565a863093540 [formerly 05e8797d6a4f37b32adadf2f60e0322bdfa99c6d] [formerly f57fe9c1887204ba58ef76c0a0408dddcc03d372 [formerly cfc15e00affd2340b44034874abd2da860f5c939]]
Former-commit-id: 299c2df030ba2c1fb5c8750de7c24bf12097b70c [formerly 237f8ddb7a22e3d8419072df99c9daa7a0692125]
Former-commit-id: 7f44481bf1003b1ee91b9e11afcd20631a31e1a3

--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -120,7 +120,7 @@
                                 </div>
                                   <ul class="unstyled contact-infos">
                                    {%for phone in companyprofile.phones%}
-                                    <li > {{phone.number}} - {{phone.type_number}} <a ><!--img class="ctodeal" src="static/img/phone-icon.png" /--></a>
+                                    <li > {{phone.number}} - {{phone.type_number}} <a ><!--img class="ctodeal" src="/static/img/phone-icon.png" /--></a>
                                     </li>
                                     {%endfor%}
                                     <br>
