--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
       <!-- END LOGO -->
       <!-- BEGIN RESPONSIVE MENU TOGGLER -->
       <a href="javascript:;" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-      <img src="static/img/sidebar-toggler-light.jpg" alt=""/>
+      <img src="/static/img/sidebar-toggler-light.jpg" alt=""/>
       </a>
       <!-- END RESPONSIVE MENU TOGGLER -->
       <!-- BEGIN TOP NAVIGATION MENU -->
@@ -112,7 +112,7 @@
               </li>
               <li class="dropdown user" id="header_task_bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
-                <img alt="" src="static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
+                <img alt="" src="/static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
                   <span class="username">
 
                   </span>
@@ -127,7 +127,7 @@
                           <a href="/apps/{{ application.key.id() }}">
                           <span class="task">
                             <span class="desc">
-                               <img class="platform_icons" height="50" width="50" src="static/img/admin_console.png">
+                               <img class="platform_icons" height="50" width="50" src="/static/img/admin_console.png">
                               {{application.label}}
                             </span>
                           </span>
@@ -139,7 +139,7 @@
                           <a href="https://drive.google.com/?tab=mo&authuser=0" target="new">
                           <span class="task">
                             <span class="desc">
-                              <img class="platform_icons" src="static/img/google_drive.png">
+                              <img class="platform_icons" src="/static/img/google_drive.png">
                              Drive
                             </span>
                           </span>
@@ -149,7 +149,7 @@
                           <a href="https://www.google.com/calendar?tab=oc" target="new">
                           <span class="task">
                             <span class="desc">
-                            <img class="platform_icons" src="static/img/google_calendar.png">
+                            <img class="platform_icons" src="/static/img/google_calendar.png">
                            Calendar
                             </span>
                           </span>
@@ -159,7 +159,7 @@
                           <a href="https://mail.google.com/mail/?tab=om" target="new">
                           <span class="task">
                             <span class="desc">
-                            <img class="platform_icons" src="static/img/google_gmail.png">
+                            <img class="platform_icons" src="/static/img/google_gmail.png">
                            Gmail
                             </span>
                           </span>
@@ -367,13 +367,13 @@
 <!-- END FOOTER -->
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
-  <script src="static/plugins/jquery.min.js"  type="text/javascript"></script>
+  <script src="/static/plugins/jquery.min.js"  type="text/javascript"></script>
 
-  <script src="static/app/scripts/vendor/select2.min.js" ></script>
-   <script src="static/app/scripts/vendor/angular.js" ></script>
+  <script src="/static/app/scripts/vendor/select2.min.js" ></script>
+   <script src="/static/app/scripts/vendor/angular.js" ></script>
    <link href="/static/angular-xeditable-0.1.8/css/xeditable.css" rel="stylesheet">
-  <script src="static/angular-xeditable-0.1.8/js/xeditable.js"></script>
-   <script src="static/app/scripts/vendor/ui-select2.js" ></script>
+  <script src="/static/angular-xeditable-0.1.8/js/xeditable.js"></script>
+   <script src="/static/app/scripts/vendor/ui-select2.js" ></script>
   <script type="text/javascript">
     var apisToLoad;
     var callback = function() {
@@ -421,113 +421,113 @@
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   </script>
 
-  <script src="static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
-  <script src="static/bootstrap3/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
-  <script src="static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
-  <script src="static/app/scripts/vendor/moment.min.js"></script>
-  <script src="static/plugins/ngQuickDate/ng-quick-date.js"></script>
-  <script src="static/app/scripts/vendor/datetimepicker.js"></script>
-  <script src="static/plugins/waterfall/zepto.js"></script>
-  <script src="static/plugins/waterfall/jquery.waterfall.js"></script>
-  <script src="static/bootstrap3/plugins/bootstrap-colorpicker2/js/bootstrap-colorpicker.js" type="text/javascript"></script>
+  <script src="/static/bootstrap3/plugins/jquery-ui/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+  <script src="/static/bootstrap3/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="/static/app/scripts/vendor/ui-bootstrap-0.5.0.js" ></script>
+  <script src="/static/app/scripts/vendor/ui-bootstrap-tpls-0.5.0.js"></script>
+  <script src="/static/app/scripts/vendor/moment.min.js"></script>
+  <script src="/static/plugins/ngQuickDate/ng-quick-date.js"></script>
+  <script src="/static/app/scripts/vendor/datetimepicker.js"></script>
+  <script src="/static/plugins/waterfall/zepto.js"></script>
+  <script src="/static/plugins/waterfall/jquery.waterfall.js"></script>
+  <script src="/static/bootstrap3/plugins/bootstrap-colorpicker2/js/bootstrap-colorpicker.js" type="text/javascript"></script>
 
 
 
-  <script src="static/app/scripts/services/authservices.js"></script>
-  <script src="static/app/scripts/services/infonodeservices.js"></script>
-  <script src="static/app/scripts/services/mapservices.js"></script>
-  <script src="static/app/scripts/services/productservices.js"></script>
-  <script src="static/app/scripts/services/accountservices.js"></script>
-  <script src="static/app/scripts/services/contactservices.js"></script>
-  <script src="static/app/scripts/services/opportunityservices.js"></script>
-  <script src="static/app/scripts/services/needservices.js"></script>
+  <script src="/static/app/scripts/services/authservices.js"></script>
+  <script src="/static/app/scripts/services/infonodeservices.js"></script>
+  <script src="/static/app/scripts/services/mapservices.js"></script>
+  <script src="/static/app/scripts/services/productservices.js"></script>
+  <script src="/static/app/scripts/services/accountservices.js"></script>
+  <script src="/static/app/scripts/services/contactservices.js"></script>
+  <script src="/static/app/scripts/services/opportunityservices.js"></script>
+  <script src="/static/app/scripts/services/needservices.js"></script>
 
 
-  <!--script src="static/app/scripts/services/services.js" ></script-->
-  <script src="static/app/scripts/services/topicservices.js" ></script>
-  <script src="static/app/scripts/services/taskservices.js" ></script>
-  <script src="static/app/scripts/services/eventservices.js" ></script>
-  <script src="static/app/scripts/services/leadservices.js" ></script>
-  <script src="static/app/scripts/services/userservices.js"></script>
-  <script src="static/app/scripts/services/groupservices.js"></script>
-  <script src="static/app/scripts/services/liveservices/showservices.js" ></script>
-  <script src="static/app/scripts/services/liveservices/feedbackservices.js" ></script>
-  <script src="static/app/scripts/services/liveservices/companyprofileservices.js" ></script>
-  <script src="static/app/scripts/services/noteservices.js" ></script>
-  <script src="static/app/scripts/services/commentservices.js" ></script>
-   <script src="static/app/scripts/services/settingservices.js" ></script>
+  <!--script src="/static/app/scripts/services/services.js" ></script-->
+  <script src="/static/app/scripts/services/topicservices.js" ></script>
+  <script src="/static/app/scripts/services/taskservices.js" ></script>
+  <script src="/static/app/scripts/services/eventservices.js" ></script>
+  <script src="/static/app/scripts/services/leadservices.js" ></script>
+  <script src="/static/app/scripts/services/userservices.js"></script>
+  <script src="/static/app/scripts/services/groupservices.js"></script>
+  <script src="/static/app/scripts/services/liveservices/showservices.js" ></script>
+  <script src="/static/app/scripts/services/liveservices/feedbackservices.js" ></script>
+  <script src="/static/app/scripts/services/liveservices/companyprofileservices.js" ></script>
+  <script src="/static/app/scripts/services/noteservices.js" ></script>
+  <script src="/static/app/scripts/services/commentservices.js" ></script>
+   <script src="/static/app/scripts/services/settingservices.js" ></script>
 
 
 
-  <script src="static/app/scripts/app.js" ></script>
-   <script src="static/app/scripts/controllers/productcontrollers.js" ></script>
-   <script src="static/app/scripts/controllers/mysettingcontrollers.js" ></script>
-   <script src="static/app/scripts/controllers/searchcontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/contactcontroller.js"></script>
-  <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
-  <script src="static/app/scripts/controllers/livecontrollers/showcontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/livecontrollers/productvideoscontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/livecontrollers/customerstoriescontrollers.js" ></script>
-   <script src="static/app/scripts/controllers/livecontrollers/feedbackscontrollers.js" ></script>
-   <script src="static/app/scripts/controllers/documentcontrollers.js"></script>
-  <script src="static/app/scripts/controllers/notecontrollers.js"></script>
-  <script src="static/app/scripts/controllers/taskcontrollers.js"></script>
-  <script src="static/app/scripts/controllers/eventcontrollers.js"></script>
-  <script src="static/app/scripts/services/edgeservices.js" ></script>
+  <script src="/static/app/scripts/app.js" ></script>
+   <script src="/static/app/scripts/controllers/productcontrollers.js" ></script>
+   <script src="/static/app/scripts/controllers/mysettingcontrollers.js" ></script>
+   <script src="/static/app/scripts/controllers/searchcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/accountcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/contactcontroller.js"></script>
+  <script src="/static/app/scripts/controllers/opportunitycontroller.js" ></script>
+  <script src="/static/app/scripts/controllers/livecontrollers/showcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/livecontrollers/productvideoscontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/livecontrollers/customerstoriescontrollers.js" ></script>
+   <script src="/static/app/scripts/controllers/livecontrollers/feedbackscontrollers.js" ></script>
+   <script src="/static/app/scripts/controllers/documentcontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/notecontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/taskcontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/eventcontrollers.js"></script>
+  <script src="/static/app/scripts/services/edgeservices.js" ></script>
   <!--Admin controllers-->
-  <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
-  <script src="static/app/scripts/controllers/settingscontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/usercontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/groupcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/settingscontrollers.js" ></script>
 
-  <script src="static/app/scripts/controllers/livecontrollers/comp_profilecontrollers.js"></script>
-  <script src="static/app/scripts/controllers/leadcontrollers.js" ></script>
+  <script src="/static/app/scripts/controllers/livecontrollers/comp_profilecontrollers.js"></script>
+  <script src="/static/app/scripts/controllers/leadcontrollers.js" ></script>
 
-  <script src="static/app/scripts/services/leadservices.js" ></script>
-  <script src="static/app/scripts/controllers/casecontrollers.js" ></script>
-  <script src="static/app/scripts/services/caseservices.js" ></script>
-  <script src="static/app/scripts/controllers/needcontrollers.js" ></script>
-  <script src="static/app/scripts/directives/directives.js" ></script>
-  <script src="static/app/scripts/services/helpers.js" ></script>
+  <script src="/static/app/scripts/services/leadservices.js" ></script>
+  <script src="/static/app/scripts/controllers/casecontrollers.js" ></script>
+  <script src="/static/app/scripts/services/caseservices.js" ></script>
+  <script src="/static/app/scripts/controllers/needcontrollers.js" ></script>
+  <script src="/static/app/scripts/directives/directives.js" ></script>
+  <script src="/static/app/scripts/services/helpers.js" ></script>
 
 
 
   <!-- IMPORTANT! Load jquery-ui-1.10.1.custom.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-  <!--<script src="static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      -->
+  <!--<script src="/static/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>      -->
 
-   <script type="text/javascript" src="static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
-   <script type="text/javascript" src="static/plugins/caret/jquery.caret.js"></script>
-  <script src="static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
+   <script type="text/javascript" src="/static/app/scripts/vendor/bootstrap-datetimepicker.min.js"></script>
+   <script type="text/javascript" src="/static/plugins/caret/jquery.caret.js"></script>
+  <script src="/static/bootstrap3/plugins/bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
   <!--[if lt IE 9]>
-  <script src="static/plugins/excanvas.min.js"></script>
-  <script src="static/plugins/respond.min.js"></script>
+  <script src="/static/plugins/excanvas.min.js"></script>
+  <script src="/static/plugins/respond.min.js"></script>
   <![endif]-->
-  <script src="static/bootstrap3/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-<script src="static/bootstrap3/plugins/moment/moment.min.js"></script>
-  <script src="static/bootstrap3/plugins/moment/angular.moment.js"></script>
-  <script src="static/bootstrap3/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-  <script src="static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
-  <script src="static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-  <script src="static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
-  <script src="static/plugins/jquery-textfill/jquery.textfill.min.js" type="text/javascript" ></script>
-  <script src="static/bootstrap3/plugins/select2/select2.min.js" type="text/javascript"></script>
-  <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
-  <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
+  <script src="/static/bootstrap3/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
+<script src="/static/bootstrap3/plugins/moment/moment.min.js"></script>
+  <script src="/static/bootstrap3/plugins/moment/angular.moment.js"></script>
+  <script src="/static/bootstrap3/plugins/jquery.blockui.min.js" type="text/javascript"></script>
+  <script src="/static/bootstrap3/plugins/jquery.cokie.min.js" type="text/javascript"></script>
+  <script src="/static/bootstrap3/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
+  <script src="/static/plugins/bootstrap-switch/static/js/bootstrap-switch.js" type="text/javascript" ></script>
+  <script src="/static/plugins/jquery-textfill/jquery.textfill.min.js" type="text/javascript" ></script>
+  <script src="/static/bootstrap3/plugins/select2/select2.min.js" type="text/javascript"></script>
+  <script src="/static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
+  <script src="/static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
   <script src="http://maps.google.com/maps/api/js?key=AIzaSyCqpqK8oOc4PUe77_nNYNvzh9xhTWd_gJk&sensor=true" type="text/javascript"></script>
-  <script src="static/app/scripts/vendor/jquery.ui.map.min.js"></script>
-  <script src="static/plugins/jquery-easy-pie-chart/angular.easypiechart.js" type="text/javascript"></script>
+  <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script>
+  <script src="/static/plugins/jquery-easy-pie-chart/angular.easypiechart.js" type="text/javascript"></script>
   <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js">
   </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/1.1.0/annyang.min.js"></script>
 
 
-<script src="static/app/scripts/vendor/app.js"></script>
-  <script src="static/plugins/fullcalendar/fullcalendar.min.js"></script>
-  <script src="static/plugins/fullcalendar/fullcalendar/lang/all.js"></script>
+<script src="/static/app/scripts/vendor/app.js"></script>
+  <script src="/static/plugins/fullcalendar/fullcalendar.min.js"></script>
+  <script src="/static/plugins/fullcalendar/fullcalendar/lang/all.js"></script>
 
-  <script src="static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
-  <script src="static/app/scripts/vendor/calendar.js"></script>
+  <script src="/static/plugins/fullcalendar/fullcalendar/gcal.js"></script>
+  <script src="/static/app/scripts/vendor/calendar.js"></script>
 
 
 
