--- a/templates/blog/public_support.html
+++ b/templates/blog/public_support.html
@@ -3,19 +3,14 @@
 <div class="row subHeader">
   <div class="currentApp">
     <h2 class="page-title">
-      {{ _("ioGrow Blog") }}
+      {{ _("ioGrow Support") }}
     </h2>
   </div>
   <div class=" subHeaderContent">
     <div class="pull-right sharebuttonDiv">
-      
+
     </div>
-    <h2 class="page-title" >
-      <a href="/blog#/articles" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Articles">
-        <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
-      </a>
-      {{ _("Articles") }}
-    </h2>
+
   </div>
 </div>
 <div  class="page-content">
@@ -32,59 +27,7 @@
     <div class="row">
 
       <div class="showPage custom-show margin-bottom-15  col-md-12">
-        {% if is_admin %}
-        <span class="page-meta pull-right">
-          <i class="icon-pencil">
-            <a ng-click="editaccount()" class="btn-link addAnotherPhone" data-toggle="modal">
-              Edit
-            </a>
-          </i>
-           |
-          <i class="icon-trash">
-            <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  Delete
-            </a>
-          </i>
-        </span>
-        {% endif %}
-        <h2 class="note-title">{{article.title}}</h2>
-        <p>Posted by {{ article.created_by.display_name }}</p>
-
-        <div class="row margin-bottom-10">
-          <div class="col-md-2">
-            <div class="pic">
-                <img alt="{{article.created_by.display_name}}" class="note-photo-creator" src="{{ article.created_by.photo }}">
-             </div>
-          </div>
-          <div class="col-md-10">
-            <div class="row">
-              <div class="col-md-12">
-                <span class="topic-content">
-                    {{ article.full_text }}
-                </span>
-
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                  <div id="disqus_thread"></div>
-                  <script type="text/javascript">
-                  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                  var disqus_shortname = 'iogrow'; // required: replace example with your forum shortname
-
-                  /* * * DON'T EDIT BELOW THIS LINE * * */
-                  (function() {
-                  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                  })();
-                  </script>
-                  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                  <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
-              </div>
-            </div>
-          </div>
-        </div>
+        <iframe src="https://docs.google.com/forms/d/1kj_5QgfNnsyAdIC2TOGbHImF5BiZwxKNBi7FaTbxOlE/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
       </div>
       <!-- END PAGE HEADER-->
@@ -186,6 +129,6 @@
 {% block script %}
 <script>
   $("ul.page-sidebar-menu li").removeClass("active");
-  $("#id_Articles").addClass("active");
+  $("#id_Support").addClass("active");
 </script>
 {% endblock %}
