--- a/templates/campaigns/campaign_show.html
+++ b/templates/campaigns/campaign_show.html
@@ -108,7 +108,7 @@
                                         
                             <ul class="chats">
                               <li class="in" ng-repeat="topic in topics" id="topic_<%=$index%>">
-                                <img class="avatar" alt="" src="static/img/avatar.jpg.png" />
+                                <img class="avatar" alt="" src="/static/img/avatar.jpg.png" />
                                 <div class="message">
                                   <span class="arrow"></span>
                                   <a href="#" class="name"><%= topic.last_updater.google_display_name%></a>
@@ -148,9 +148,9 @@
                                  
                                 </div>
                                   <ul class="unstyled contact-infos">
-                                    <li>(415) 663-4433  <a href="#"><img class="ctodeal" src="static/img/phone-icon.png" /></a></li>
-                                    <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="static/img/phone-icon.png" /></a></li>
-                                    <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="static/img/phone-icon.png"/></a></li>
+                                    <li>(415) 663-4433  <a href="#"><img class="ctodeal" src="/static/img/phone-icon.png" /></a></li>
+                                    <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="/static/img/phone-icon.png" /></a></li>
+                                    <li>(415) 663-4433 <a href="#"><img class="ctodeal" src="/static/img/phone-icon.png"/></a></li>
                                     <li><a href="#"><i class="icon-plus"></i> Add a new phone number </a></li>
 
                                   </ul>
