--- a/templates/base.html
+++ b/templates/base.html
@@ -100,9 +100,9 @@
         <!-- BEGIN TOP NAVIGATION MENU -->
 
         <ul class="nav navbar-nav pull-right">
-              <li class="dropdown user">
+             <!-- <li class="dropdown user">
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
-              </li>
+              </li> -->
               <li class="dropdown user">
                 <a href="/#/admin/users" class="dropdown-tog" target="new">
                   <span class="username">
