adding social share buttons to support page
Former-commit-id: 1f9b5bf2326a9c1981cfe23c1ef8951b56d0585b [formerly fcf66d4d8fa8f2b351aa976fdadcf19ede1440e8] [formerly 4b9bf4b5b070f2c001866e37024e1fa0da0d0be9 [formerly 3af425188df22f56bffb1bf533a5652090e78755]]
Former-commit-id: bbcb2649c41f3baf6cd1a6a3e8144b3f0d3c0144 [formerly 59ac43472a3bdc2288a70838e1880e5979a7a15a]
Former-commit-id: a0648c586ae3610a4c134891f9a1596f992ceae0

--- a/templates/blog/public_support.html
+++ b/templates/blog/public_support.html
@@ -49,14 +49,14 @@
         <div class="portlet showCard">
           <div class="portlet-title line">
             <div class="caption">
-              Community
+              Share
             </div>
           </div>
           <div class="portlet-body" id="chats">
             <div class="scroller" style="height:200x" data-always-visible="1" data-rail-visible="0">
               <div id="newTask">
 
-                  [TODO: put here social media connections ]
+                   <div class="addthis_sharing_toolbox"></div>
 
               </div>
             </div>
@@ -127,6 +127,7 @@
 
 {% endblock %}
 {% block script %}
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53aef4a2107c3e52"></script>
 <script>
   $("ul.page-sidebar-menu li").removeClass("active");
   $("#id_Support").addClass("active");
