changing design of  related events in  lead_show page(no more popup)
Former-commit-id: 0752506205f159a19bc916ab6d8c3c0b36b13677 [formerly 6256e5978e40dd668d5a1d1505a1c0eb6ec78020] [formerly fa2ac681eed237e147d49a4889b93dae5f2e7e4b [formerly a25220d26eaf682898a59fb4a87b655a894febeb]]
Former-commit-id: 8f77b8013a8bde2baa13944b5e8ba8145474e931 [formerly ec912f38de06c9caf5e80524c6267fed3825a766]
Former-commit-id: 43922749197f14fab0cc185ec8b3c666a85238ae

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -614,7 +614,7 @@
         <div class="col-md-12">
           <div class="portlet showPage rightCardContent">
                 <div class="portlet-title line">
-                  <div class="caption"> <i class="fa fa-check"></i>Related Tasks </div>
+                  <div class="caption"> <i class="fa fa-check"></i>Tasks </div>
 
                 </div>
                 <div class="newContactform portlet-body" id="chats">
@@ -680,12 +680,12 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick ng-model='ioevent.starts_at' placeholder="From" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                          <datetimepick icon-class='fa fa-calendar'  ng-model='ioevent.starts_at' placeholder="From" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
                                     </div>
                                 </div>   
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick ng-model='ioevent.ends_at' placeholder="To" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                          <datetimepick  icon-class='fa fa-calendar' ng-model='ioevent.ends_at' placeholder="To" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
                                     </div>
                                 </div>  
                                 <div class="row">
@@ -702,7 +702,7 @@
                           </div>
                       </div>      
                   </form>
-                   <ul id="tasks" class="list-unstyled lead_related_events">
+                   <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
                       <li ng-repeat="event in events" id="event_<%=$index%>">
                         <input value="check1" type="checkbox">
                         <span>
