--- a/templates/activities/event_show.html
+++ b/templates/activities/event_show.html
@@ -92,8 +92,8 @@
                 <strong>Description</strong>
               </div>
               <div class="form-group row">
-                    <div class="col-md-12">
-                      <textarea id="noteBody" ng-blur="updateEvent(<%=event.description%>)" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description"></textarea>
+                   <div class="col-md-12">
+                      <input id="noteBody" ng-blur="updateEvent({'id':event.id,'description':event.description})" class="form-control ng-pristine ng-valid" rows="3" ng-model="event.description">
                     </div>
               </div>
               <div class="news-block-tags event-block-title">
