contacts send email fixed
Former-commit-id: cdd6d468bf8f93904b048da25e6aa7f39a77e44c [formerly 42ca9722ef366aaa4492c795ff8462aeb2ce7359] [formerly 5350294d6e9b3fe417b012af34f9ef9b9d1dfc9d [formerly 12f10ce8fad5c481fda0864e022b2c998992411e]]
Former-commit-id: f4a1a2af31257712ce26f51400ba5571fce754bc [formerly f02e970058c31a548ec63f360079cce9230e489e]
Former-commit-id: d11e4b246e8de9f8aed874c7eeec4d8c73ab37c2

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -125,7 +125,7 @@
                     <a ng-click="selectedTab = 1;">Notes</a>
                   </li>
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab ==8}">
-                    <a ng-click="selectedTab = 8;">Send an Email</a>
+                    <a ng-click="selectedTab = 8;sendEmailSelected();">Send an Email</a>
                   </li>
                   <!--li class="ng-tab sm-menu" ng-class="{active: selectedTab == 3}">
                     <a ng-click="waterfall(); selectedTab = 3;">Contacts</a>
@@ -836,9 +836,7 @@
                                             <div class="form-group">
                                             <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
                                              </div>
-                                          <div class="form-group">
-                                            <textarea id="some-textarea" placeholder="Enter text ..." id="noteBody" class="form-control ng-pristine ng-valid" rows="7" ng-model="email.body"></textarea>
-                                             </div>
+                                      
                                          <div class="pull-right">
 
                                             <input   ng-click="sendEmail(email)" ng-disabled="isLoading" type="submit" class="btn green" value="Send">
