fix more white spaces on leads.show and contact.show pages when we haven't all infos about the lead of the contact like the company name  or  title or source  .... , all that  by adding these informations in ul list instead of using <br>
Former-commit-id: 5929bd38160c98af9743fb9eb800fcba0d91eab3 [formerly f8c15411373fdfeb7b71767829ee529b793477d6] [formerly 09a5d8330744ed6e203c599fd67c6c97f766d922 [formerly bf668c2ab2b6557700428a4fa639514d6cab2aa6]]
Former-commit-id: 2fbfcf0b25819b419d27f71ab54c7cbe76ffcc7b [formerly 36e0f7ac569aa74ba22ef3f6ab77d3a3b691123b]
Former-commit-id: 6a06bb74d09cd1d976fffc1e169d7f15930f7968

--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
         <!-- BEGIN TOP NAVIGATION MENU -->
 
         <ul class="nav navbar-nav pull-right">
-              <li class="dropdown user chrome-ext">
+              <li class="dropdown user chrome-ext hidden-xs">
 	                <input type="submit" onclick="$('#InstallChromeExtension').modal() " class="btn blue btn-block pull-right" value="Install chrome extension" style="padding-left:5px;padding-right:5px;">
               </li>
               <li class="dropdown user">
@@ -110,7 +110,7 @@
                   </span>
                 </a>
               </li>
-              <li class="dropdown user app-menu" id="header_task_bar">
+              <li class="dropdown user app-menu hidden-xs" id="header_task_bar">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
                 <img alt="" src="static/bootstrap3/img/glyphicons_156_show_thumbnails.png" width="18">
                   <span class="username">
