--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -62,31 +62,43 @@
             </div>
             <div class="col-md-10">
               <div class="row">
-                <div class="col-md-12">
-                  <span class="page-meta pull-right">
-                    <i class="icon-pencil">
-                      <a ng-click="editLead()" class="btn-link addAnotherPhone" data-toggle="modal">
-                        Edit
-                      </a>
-                    </i>
-                     |
-                    <i class="icon-trash">
-                      <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  Delete
-                      </a>
-                    </i>
-                  </span>
-
-          <span ng-show="lead.updated_at" class="contact-title" >Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %> </span><br>
-              <span ng-show="lead.title">{{_("Title")}} : <a   href="/#/search/type:Lead <%=lead.title%>" class="tag" ng-show="lead.title"> #<%= lead.title %> </a></span><span ng-show="lead.company">{{_("Company")}} : <a   href="/#/search/type:Lead <%=lead.company%>" class="tag" ng-show="lead.company"> #<%= lead.company %></a></span> <br>
-              <span ng-show="lead.industry">{{_("Industry")}} : </span>
-              <a   href="/#/search/type:Lead <%=lead.industry%>" class="tag" ng-show="lead.industry"> #<%= lead.industry %></a> <br>
-              <span ng-show="lead.source">{{_("Source")}} : </span>
-              <a   href="/#/search/type:Lead <%=lead.source%>" class="tag" ng-show="lead.source"> #<%= lead.source %></a> <br>
-              <span ng-show="lead.status">{{_("Status")}} : </span>
-              <a   href="/#/search/type:Lead <%=lead.status%>" class="tag" ng-show="lead.status"> #<%= lead.status %></a> <br>
-                  <br>
-                  <hr>
-                </div>
+                    <div class="col-md-12">
+                      <span class="page-meta pull-right">
+                        <i class="icon-pencil">
+                          <a ng-click="editLead()" class="btn-link addAnotherPhone" data-toggle="modal">
+                            Edit
+                          </a>
+                        </i>
+                         |
+                        <i class="icon-trash">
+                          <a ng-click="editbeforedelete()" class="btn-link addAnotherPhone">  Delete
+                          </a>
+                        </i>
+                      </span>
+                      <ul class="list-unstyled leadInfos">
+                          <li>
+                            <span ng-show="lead.title">{{_("Title")}} : <a   href="/#/search/type:Lead <%=lead.title%>" class="tag" ng-show="lead.title"> #<%= lead.title %> </a></span><span ng-show="lead.company">{{_("Company")}} : <a   href="/#/search/type:Lead <%=lead.company%>" class="tag" ng-show="lead.company"> #<%= lead.company %></a></span>
+                          </li>
+                          <li ng-show="lead.industry">
+                             <span>{{_("Industry")}} : </span>
+                              <a   href="/#/search/type:Lead <%=lead.industry%>" class="tag" > #<%= lead.industry %></a>
+                          </li>
+                          <li ng-show="lead.source">
+                            <span >{{_("Source")}} : </span>
+                            <a href="/#/search/type:Lead <%=lead.source%>" class="tag">
+                             #<%= lead.source %></a>
+                          </li>
+                          <li ng-show="lead.status">
+                            <span >{{_("Status")}} : </span>
+                            <a href="/#/search/type:Lead <%=lead.status%>" class="tag">
+                             #<%= lead.status %></a>
+                          </li>
+                          <li ng-show="lead.updated_at" >
+                            <span class="contact-title" >Updated at:  <%=lead.updated_at | date:'yyyy-MM-dd - HH:mm:ss ' %> </span>
+                          </li>
+                      </ul>
+                       <hr class="sm-hr">
+                    </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
