adding delete lead button to leads list directly from the card
Former-commit-id: 84179eb75e6b57821b02682b0c05108e6cc839c1 [formerly b1a680a4133ac705012f3dbc499899752608cc14] [formerly dfe7e093a7ad62cc72f2eb3851b0bfd6892d6f95 [formerly ff72277a105a7e89110f6aa360bce75c18b28894]]
Former-commit-id: 00cae25a0580034ef8d0eef9914a33418fa8ba11 [formerly aa22b6ddf9229f22dc03ee7aee518d252e2b3b8c]
Former-commit-id: 0ebeccd4b33ed6a82bd298c5fe9dd7d3853f0ce9

--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -466,23 +466,17 @@
 
                       </div>
                   <!--HKA 24.12.2013 Modal before Deleting Lead-->
-         <div id="BeforedeleteLead" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h3 id="myModalLabel" class="modal-title">Delete Lead</h3>
+         <div id="BeforedeleteLead" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
+              aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                  <h3 id="myModalLabel" class="modal-title">Delete Lead</h3>
               </div>
               <div class="modal-body">
                  <form id="seletesho" name="deletesho" class="form-horizontal">
-
-
                   <p>{{_("Are you sure you want to delete")}} :  <%= lead.firstname %> <%= lead.lastname %> .</p>
-
-
-
-
-
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
