pull request for new account controls
Former-commit-id: c170622087d7640724c6f7e651dda9a73589d19e [formerly 057611c20d869ad9fa7307924e8ccce52fee1928] [formerly cf73ebe21eac1535a23ea64d4cef0f61c2684e24 [formerly d92999297ec23f0acfa017310b9d0160cbe93d9e]]
Former-commit-id: e0a2a665d0490ec97f50022a67d23cc7d0319b2d [formerly c215e409a8d20ae50948e563b19814f266bf8296]
Former-commit-id: 2d80c65c0dd4b1db2d97e54f1b39334b50bd3462

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -237,7 +237,12 @@
                                           </div>
                                           <div class="form-group sm-group" style="">
                                             <label class="sr-only" for="exampleInputEmail2">Number</label>
-                                            <input type="text" class="form-control" id="exampleInputEmail2" ng-model="phone.number" placeholder="Enter a number">
+                                            <input 
+                                              type="text" 
+                                              class="form-control" 
+                                              id="exampleInputEmail2" 
+                                              ng-model="phone.number" 
+                                              placeholder="Enter a number">
                                           </div>
                                            <button type="submit" ng-click="addPhone(phone)" class="btn blue jfk-button jfk-button-action">Add</button>
                                             <button type="submit" class="btn btn-default" ng-click="showPhoneForm=false">X</button>
