pull request to get send email
Former-commit-id: eaf629289dccae57a06389a4d83727cd0ef6aede [formerly b15bd063b0e3c06a40cef2c417be3642c5b262aa] [formerly fe597c516325590cec9339978607115af6472a6f [formerly aea1f501da5b988aa2cd3d02301b9b702ec0d70f]]
Former-commit-id: 3acde8afe0d9235e4ab1219a13248efe1925c2a2 [formerly 1f09de345c338214d978effc372da6cf6375ddb8]
Former-commit-id: a0c0aa12f81ef288c8edb3da61f3ab2ee0da03e9

--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -282,8 +282,11 @@
                                           </form>
                                         </div>
                           </li>
-                        <li ng-repeat="email in infonodes.emails"> <a onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)" editoptions editdataattr="deleteInfonode('<%=email.entityKey%>','email')"> <%=email.email %>  </a> </li>
-                          <li><a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm=true"><i class="icon-plus"></i> Add a new email address </a></li>
+                          <li ng-repeat="email in infonodes.emails"> <a editable-text="email.email" editoptions editdataattr="deleteInfonode('<%=email.entityKey%>','emails')" onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)"> <%=email.email %>  </a> </li>
+                          <li><a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm=true"><i class="icon-plus"></i> Add a new email address </a>
+                          </li>
+                       <!--  <li ng-repeat="email in infonodes.emails"> <a onbeforesave="inlinePatch('Infonode','emails', 'email',email.entityKey,$data)" editoptions editdataattr="deleteInfonode('<%=email.entityKey%>','email')"> <%=email.email %>  </a> </li>
+                          <li><a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm=true"><i class="icon-plus"></i> Add a new email address </a></li> -->
 
                         </ul>
                         <div class="news-block-tags">
