changing datetimepicker on new event form on leads.show page
Former-commit-id: 1792d6cdd72b6a529a8382a3425a8d2e46536e74 [formerly eb38da59b3056e730fb533b2927838da6d27fc3f] [formerly 8983712f41972e02bb545e2f3de8a9a9804effba [formerly eff531cb51d518cb1761444db67d18c336e0cb24]]
Former-commit-id: a3db4d4f0a710fc7d7c620f1a4e22dc29fdb726e [formerly 5f95bc95517ab91638c0a3a08356bdfa3208ad78]
Former-commit-id: 84f8eec555ac7719b58f67b0df88cd0ab9f9670b

--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -148,6 +148,12 @@
                                             Assignee
                                            </span>
                                         </button>
+                                        <button ng-click="deleteTask()" class="btn btn-sm btn-default task_action" ng-class="{disabled: selected_tasks.length==0}">
+                                          <i class="icon-trash"></i>
+                                           <span class="btn-text">
+                                            Delete
+                                           </span>
+                                        </button>
                                         </div>
                                       </form>
                                         </div>
