--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -686,12 +686,36 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick icon-class='fa fa-calendar'  ng-model='ioevent.starts_at' placeholder="From" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                          <div class="dropdown">
+                                            <a class="dropdown-toggle" id="EventStartsAtSelector" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                              <div class="input-group">
+                                                  <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-calendar"></i>
+                                                  </span>
+                                                  <input type="text" placeholder="From" class="form-control" data-ng-model="ioevent.starts_at">
+                                              </div>
+                                            </a>
+                                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                              <datetimepicker data-ng-model="ioevent.starts_at" data-datetimepicker-config="{ dropdownSelector: '#EventStartsAtSelector' }"/>
+                                            </ul>
+                                          </div>
                                     </div>
                                 </div>   
                                 <div class="row">
                                     <div class="col-md-12 margin-bottom-10">
-                                          <datetimepick  icon-class='fa fa-calendar' ng-model='ioevent.ends_at' placeholder="To" class="new-task-date" label-format='MMM d, h:mm a'></datetimepick>
+                                          <div class="dropdown">
+                                            <a class="dropdown-toggle" id="EventEndsAtSelector" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                              <div class="input-group">
+                                                  <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-calendar"></i>
+                                                  </span>
+                                                  <input type="text" placeholder="To" class="form-control" data-ng-model="ioevent.ends_at">
+                                              </div>
+                                            </a>
+                                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                              <datetimepicker data-ng-model="ioevent.ends_at" data-datetimepicker-config="{ dropdownSelector: '#EventEndsAtSelector' }"/>
+                                            </ul>
+                                          </div>
                                     </div>
                                 </div>  
                                 <div class="row">
