adding searchForm controller in the blog
Former-commit-id: 9588933b40f74baf0cf3bb4426bfc83338c574e6 [formerly fd134a676e5966d80323e5bd5137862ac42aebee] [formerly 70b17ac0908092938f57d81aa8d53c2dcc785aea [formerly 2077062a55fd38424ea85c43be08115e889c06be]]
Former-commit-id: f36295a16920b51fdd4fff1adfe837059cab8b66 [formerly 252978dd196be17f3d45b017dbee6fcd8c92d6af]
Former-commit-id: 133df0be9392e498ebdb67119051a812a1695939

--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -79,8 +79,8 @@
 
                   </span>
                   <br>
-                  <span>
-                    <%=article.intro_text %>
+                  <span ng-bind-html-unsafe="article.intro_text">
+                    
                   </span>
 
 
