--- a/templates/blog/public_article_show.html
+++ b/templates/blog/public_article_show.html
@@ -8,7 +8,7 @@
   </div>
   <div class=" subHeaderContent">
     <div class="pull-right sharebuttonDiv">
-      
+
     </div>
     <h2 class="page-title" >
       <a href="/blog#/articles" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Articles">
@@ -27,7 +27,7 @@
       </span>
     </div>
   </div>
-<div ng-show="isContentLoaded" class="row">
+<div class="row">
   <div class="col-md-9">
     <div class="row">
 
